Improve contact form, style scrollbar, fix background element

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -69,6 +69,23 @@
 		scroll-behavior: smooth;
 	}
 
+	html::-webkit-scrollbar-track {
+		/* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+		border-radius: 10px;
+		background-color: var(--color-bg-alt);
+	}
+
+	html::-webkit-scrollbar {
+		width: 10px;
+		background-color: #f5f5f5;
+	}
+
+	html::-webkit-scrollbar-thumb {
+		border-radius: 10px;
+		/* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+		background-color: var(--color-primary);
+	}
+
 	body {
 		color: var(--color-font);
 		background-color: var(--color-bg);
